required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN branch-5-0)
--------------------------------

- mappdf.c: support output in fastcgi case via msIO_fwrite() (#2406) 

- Avoid crash when generating error message (#2389)

- Added 1.0.1 to list of supported versions for connectiontype WMS 
  layers (#2385)

- fixed blue/green color swapping for space delimited strings bound to an
  attribute. (#2378)

- [WMS Context] Fixed crash when loading a context file (#2372)

- Fixed legend icons not drawing when using maxscaledenom

- Fixed modulus operator in the parser (#2323)

- maprasterquery.c: Fix crash when queryies on done on raster layers with 
  no styles (#2343)

- Improve out of memory handling in mapdrawgdal.c, and mapgd.c. (#2351)

- don't bail out in map parsing if the outputformat had to be modified (#2321) 

- Improve configuration logic for fastcgi (#2355).

- mapdraw.c,mapquery.c: Reset layer->project flag for each full layer drawing 
  or query so that need to reproject will be reconsidered (#673).

Version 5.0.0 (2007-09-17)
--------------------------

- AGG: Fix angle computation for truetype marker symbols on lines (#2316) 

- Fix support for bilinear resampling of raster data with AGG (#2303)


Version 5.0.0-rc2 (2007-09-10)
------------------------------

- Prevent seg fault in msWMSLoadGetMapParams when request is missing (#2299)

- Fixed calculation of scale in PHP MapScript mapObj.zoomScale() (#2300)

- Fixed conflict between runtime substitution validation and qstring 
  validation.

- Fixed agg configure logic (now should work with --with-agg alone) (#2295)

- Fixed interleaving of multi-band results for raster query (#2294).


Version 5.0.0-rc1 (2007-09-05)