@@ -13,6 +13,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN branch-5-0)
 --------------------------------
 
+- fixed symbolsetObj not to set the SWIG immutable flag permanently
+  don't expose refcount and the symbol attributes (Ticket #2407)
+
 - mappdf.c: support output in fastcgi case via msIO_fwrite() (#2406) 
 
 - Avoid crash when generating error message (#2389)
